--- a/Writeup/Results/results_include.tex
+++ b/Writeup/Results/results_include.tex
@@ -54,7 +54,7 @@ Eq.\ref{prob_unchanged} inversely depends on the distance between the CEC and th
 \end{figure}
 
 \subsection{Laser Power}
-The power of the laser is the most important parameter when simulating the effects of optical pumping on a hyperfine spectrum. This sections first shows the behavior of the model as the power is changed. Figures \ref{power1-40} and \ref{power50-100} show how a simulated spectrum of Gallium-69 changes as the power of the exciting laser is increased from 1.0 to 100 mW. As the power of the laser is increased, certain transitions become less likely with respect to others, changing the relative intensities of the peaks. At laser powers about 20 mW, the spectrum begins to be dominated by the F$_g = 3 \rightarrow$F$_e = 2$ transition. At powers above 50 mW, the spectrum is entirely dominated by this transition.
+The power of the laser is the most important parameter when simulating the effects of optical pumping on a hyperfine spectrum. This sections first shows the behavior of the model as the power is changed. Figures \ref{power1-40} and \ref{power50-100} show how a simulated spectrum of Gallium-69 changes as the power of the exciting laser is increased from 1.0 to 100 mW. As the power of the laser is increased, certain transitions become less likely with respect to others, changing the relative intensities of the peaks. At laser powers about 20 mW, the spectrum begins to be dominated by the \textbf{F}$_g = 3 \rightarrow$\textbf{F}$_e = 2$ transition. At powers above 50 mW, the spectrum is entirely dominated by this transition.
 
 \begin{figure}[h!]
 \begin{center}
